fix: update gray and white colors in dark theme for better contrast

--- a/app/assets/scss/globals.scss
+++ b/app/assets/scss/globals.scss
@@ -45,9 +45,9 @@ $mobileSmall: em(479.98);
 @media (prefers-color-scheme: dark) {
     :root {
         --color-main: #d2d4d7;
-        --color-gray: #1a1d21;
+        --color-gray: #21252a;
         --color-dark: #9ca3af;
-        --color-white: #0f1115;
+        --color-white: #17191e;
         --color-blue: #3b82f6;
         --color-hover: #2563eb;
         --color-border: rgb(255 255 255 / 12%);
